# PLAID

./: .bazelrc  .gitignore  .gitmodules  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  bench.sh  config.h  configs.h  generate-random-numbers.cc  io_uring_test.cpp  permutation.cpp  result.txt  sample-sort.cpp  sequence.cpp  speed-test.cpp  test-rng.cpp  test.cpp
benchmarks/: BUILD.bazel  distribution_benchmarks.cpp  distribution_benchmarks.h  in_memory_benchmarks.cpp  in_memory_benchmarks.h  io_benchmarks.cpp  io_benchmarks.h
scatter_gather_algorithms/: BUILD  nop.h  permutation.h  sample_sort.h  scatter_gather.h
scripts/: bench_in_memory_sort.sh  bench_io.sh  bench_map.sh  bench_permutation.sh  bench_rand_read.sh  bench_reduce.sh  bench_sort.sh  bench_ssd_scaling.sh  clear.sh  fstrim.sh  reset.sh  scatter_gather_no_io.sh  scatter_gather_nop.sh  ssd_assignment.py  test_sort.sh  test_ssd_scaling.sh
scripts/baldr-bench/: .gitignore  README.md
scripts/baldr-bench/fio/: block_size.py  converter.py  experiment.py  fs_scaling.sh  other.py  ssd_scaling.sh  write_scaling.sh
scripts/baldr-bench/fio/old_scripts/old_scripts/: all_sdd_read.md  four_ssd_read.md  four_ssd_read.sh  fs_read.py  fs_read.sh  one_ssd_read.md  one_ssd_read.sh
scripts/baldr-bench/fio/old_scripts/rw/: one_ssd_write.sh
scripts/baldr-bench/fio/old_scripts/write/: four_ssd_write.md  four_ssd_write.sh  one_ssd_write.md  one_ssd_write.sh
scripts/baldr-bench/fio/results/: dstat_single_ssd_write.txt  dstat_single_ssd_write2.txt  fs_scaling.txt  ssd_block_size.txt  ssd_block_size_4k.txt  ssd_no_direct_io.txt  ssd_scaling.txt  ssd_scaling_root_complex.txt  write_scaling.txt
scripts/baldr-bench/help/: commands.md  fio_benchmarking.md  persistent_block_device_naming.md  resources.md
scripts/baldr-bench/logs/: boot_errors.txt
scripts/baldr-bench/memory/: likwid.md
scripts/baldr-bench/memory/stream/: result.md  run.sh
scripts/baldr-bench/utils/: blkdiscard.sh  disks.sh  fallocate.sh  fstrim.sh  make_mount_points.sh  mount.sh  partition.sh  raid.sh  xfs_repair.sh
scripts/results/: distribution_noop.csv  distribution_nop.csv  in_memory_sort.txt  map.csv  permutation_result.txt  rand_read.csv  read_only.csv  reduce.csv  result.txt  sorting_result.md  sorting_result_1.txt  sorting_result_2.txt  sorting_result_size_scaling.txt  sorting_result_ssd_scaling.txt  sorting_ssd_scaling_1.txt  sorting_ssd_scaling_2.txt
scripts/results/old/: ssd_scaling_result.md
sequence/: BUILD.bazel  sequence.h
sequence_algorithms/: BUILD.bazel  filter.h  map.h  reduce.h
sorter/: BUILD  sample_sort.h  scatter_gather.h
utils/: BUILD  command_line.cpp  command_line.h  file_info.h  file_utils.cpp  file_utils.h  logger.cpp  logger.h  ordered_file_writer.h  random_number_generator.cpp  random_number_generator.h  random_read.h  simple_queue.h  timer.h  type_allocator.h  unordered_file_reader.h  unordered_file_writer.h
(+12 files in other folders)
