###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

#module(
#    name = "sorting",
#    version = "0.1",
#)

# -- bazel_dep definitions -- #

#bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")
#bazel_dep(name = "parlaylib", version = "xyz")
#git_override(
#    module_name = "parlaylib",
#    commit = "2a55b05c2aa6451923614a989e5e026bc8056f68",
#    remote = "https://github.com/ParAlg/parlaylib.git",
#)

# -- use_repo_rule statements -- #

# -- repo definitions -- #
