load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

# Google Abseil Libs
git_repository(
    name = "com_google_absl",
    remote = "https://github.com/abseil/abseil-cpp.git",
    tag = "20240116.1",
)

git_repository(
    name = "parlaylib",
    commit = "6b4a4cdbfeb3c481608a42db0230eb6ebb87bf8d",
    remote = "https://github.com/ParAlg/parlaylib.git",
    strip_prefix = "include/",
)
