cc_library(
    name = "io_benchmarks",
    srcs = ["io_benchmarks.cpp"],
    hdrs = ["io_benchmarks.h"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//scatter_gather_algorithms:scatter_gather_nop",
        "//utils:command_line",
        "//utils:io_utils",
        "@com_google_absl//absl/log",
        "@parlaylib//parlay:primitives",
    ],
)
