cc_library(
    name = "reduce",
    srcs = ["reduce.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//utils:io_utils",
        "@com_google_absl//absl/log",
        "@parlaylib//parlay:primitives",
    ],
)

cc_library(
    name = "map",
    srcs = ["map.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//utils:io_utils",
        "@parlaylib//parlay:primitives",
    ],
)
